fixed footer overflow on mobile. new front page logo, particle adjustments, mobile friendly!

--- a/css/heroic-features.css
+++ b/css/heroic-features.css
@@ -77,9 +77,18 @@ transform:scale(1.1);
   color: rgb(23, 162, 184);
   background: none;
   cursor: pointer;
-  margin: 5px;
+  margin: 2px;
 }
 
+footer{
+    bottom:0px;
+    background-color: #336699;
+    width:100%;
+    text-align:center;
+    padding-top:0px;
+    padding-bottom:0px;
+    color:#ffffff;
+}
 .btn span {
   cursor: pointer;
   display: inline-block;
